devel
-----

* Fix: writeConcern is now honored correctly (ES-655).

* Fix: The 'sorted' COLLECT variant would return undefined instead of null when
  grouping by a null value.

* Hard-code returned "planVersion" attribute of collections to a value of 1.
  Before 3.7, the most recent Plan version from the agency was returned inside
  "planVersion".
  In 3.7, the attribute contained the Plan version that was in use when the 
  in-memory LogicalCollection object was last constructed. The object was
  always reconstructed in case the underlying Plan data for the collection
  changed or when a collection contained links to arangosearch views.
  This made the attribute relatively useless for any real-world use cases, and
  so we are now hard-coding it to simplify the internal code. Using the attribute
  in client applications is also deprecated.

* Slightly improve the performance of cluster DDL maintenance operations.

* Don't prevent concurrent synchronization of different shards from the same
  database. Previously only one shard was synchronized at a time per database.

* Fixed OASIS-278 issue: Added proper sort/calc nodes cleanup for late materialzation
  after OneShard optimization
  
* Improve performance of many non-subquery AQL queries, by optimizing away
  some storage overhead for subquery context data.

* Improve performance of internal cluster Plan and Current reload operations. 

* Fixed issue #12349: arangosh compact Arangoerror 404.

* Wait until restore task queue is idle before shutting down.

* Fix a race problem in the unit tests w.r.t. PlanSyncer.

* Always fetch data for /_api/cluster/agency-dump from leader of the agency.
  Add option "redirectToLeader=true" to internal /_api/agency/state API.

* Fixed issue #12297: ArangoDB 3.6.5 Swagger Error?
  This issue caused the Swagger UI for displaying the APIs of user-defined Foxx
  services to remain invisible in the web UI, because of a JavaScript exception.